--- a/CogMI Conference/ProcessData.ipynb
+++ b/CogMI Conference/ProcessData.ipynb
@@ -261,12 +261,129 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Clean up 1st Twitter Dataset"
+    "# Size of Datasets"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "originalClass = ['The tweet is not offensive',\n",
+    "                 'The tweet uses offensive language but not hate speech',\n",
+    "                 'The tweet contains hate speech']\n",
+    "\n",
+    "newClass = [0, 1, 2]\n",
+    "\n",
+    "data_1['does_this_tweet_contain_hate_speech'] = data_1['does_this_tweet_contain_hate_speech'].replace(originalClass, newClass)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Size of Dataset 1: 14509\n",
+      "Size of Dataset 2: 24783\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Size of Dataset 1: %s' % len(data_1['does_this_tweet_contain_hate_speech']))\n",
+    "print('Size of Dataset 2: %s' % len(data_2['class']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neutral Tweets in Dataset 1: 7274\n",
+      "Neutral Tweets in Dataset 2: 4163\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Neutral Tweets in Dataset 1: %s\" % len(data_1[data_1['does_this_tweet_contain_hate_speech'] == 0])) \n",
+    "print(\"Neutral Tweets in Dataset 2: %s\" % len(data_2[data_2['class'] == 2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Offensive Tweets in Dataset 1: 4836\n",
+      "Offensive Tweets in Dataset 2: 19190\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Offensive Tweets in Dataset 1: %s\" % len(data_1[data_1['does_this_tweet_contain_hate_speech'] == 1]))\n",
+    "print(\"Offensive Tweets in Dataset 2: %s\" % len(data_2[data_2['class'] == 1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hate Tweets in Dataset 1: 2399\n",
+      "Hate Tweets in Dataset 2: 1430\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hate Tweets in Dataset 1: %s\" % len(data_1[data_1['does_this_tweet_contain_hate_speech'] == 2]))\n",
+    "print(\"Hate Tweets in Dataset 2: %s\" % len(data_2[data_2['class'] == 0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hate/Offensive Tweets in Dataset 1: 7235\n",
+      "Hate/Offensive Tweets in Dataset 2: 20620\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Hate/Offensive Tweets in Dataset 1: %s\" % len(data_1[data_1['does_this_tweet_contain_hate_speech'] != 0]))\n",
+    "print(\"Hate/Offensive Tweets in Dataset 2: %s\" % len(data_2[data_2['class'] != 2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Clean up 1st Twitter Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,19 +394,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "originalClass = ['The tweet is not offensive',\n",
-    "                 'The tweet uses offensive language but not hate speech',\n",
-    "                 'The tweet contains hate speech']\n",
+    "originalClass = [0, 1, 2]\n",
     "newClass = [0, 1, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +489,7 @@
        "4  @Zhugstubble You heard me bitch but any way I'...      1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +602,7 @@
        "4  !!!!!!!!!!!!! RT @ShenikaRoberts: The shit you...      1"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,76 +615,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Size of Datasets"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Size of Dataset 1: 14509\n",
-      "Size of Dataset 2: 24783\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('Size of Dataset 1: %s' % len(data_1['class']))\n",
-    "print('Size of Dataset 2: %s' % len(data_2['class']))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Neutral Tweets in Dataset 1: 7274\n",
-      "Neutral Tweets in Dataset 1: 4163\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Neutral Tweets in Dataset 1: %s\" % len(data_1[data_1['class'] == 0])) \n",
-    "print(\"Neutral Tweets in Dataset 1: %s\" % len(data_2[data_2['class'] == 0]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hate/Offensive Tweets in Dataset 1: 7235\n",
-      "Hate/Offensive Tweets in Dataset 1: 20620\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(\"Hate/Offensive Tweets in Dataset 1: %s\" % len(data_1[data_1['class'] == 1]))\n",
-    "print(\"Hate/Offensive Tweets in Dataset 1: %s\" % len(data_2[data_2['class'] == 1]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Define Text Processing Functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -623,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -651,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +745,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -760,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -780,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -875,7 +926,7 @@
        "4  [@] heard bitch way back th texa wtf talk bitc...      1"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -886,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -953,7 +1004,7 @@
        "14508  [@] aryan kapoor cute name tho  want kamp firs...      0"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -971,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1038,7 +1089,7 @@
        "4   [@] shit hear might true might faker bitch to...      1"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1049,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1167,7 @@
        "24782  ruffl  ntac eileen dahlia  beauti color combin...      0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1134,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1172,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -1198,7 +1249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1207,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1217,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
